bugfixes: ff mathjax scrollbars, ff flowline gaps, ff poinicare plot points, poincare two-side resonance triggers, z-reposition axes

--- a/styles/paper.css
+++ b/styles/paper.css
@@ -210,7 +210,7 @@ mjx-container[jax="CHTML"][display="true"]::-webkit-scrollbar-thumb:hover {
 }
 
 /* Firefox */
-.element-with-scrollbar {
+mjx-container[jax="CHTML"][display="true"] {
   scrollbar-width: var(--scrollbar-width);
-  scrollbar-color: #f1f1f1 white;
+  scrollbar-color: #ddd transparent;
 }
